# orange-red

./: .gitignore  FORMAT.md  LICENSE  README.md  SPEC.md  alembic.ini  orange-red.code-workspace  pyproject.toml  requirements-dev.txt  skills-lock.json
.agents/skills/caveman/: README.md  SKILL.md
.devcontainer/: .env.example  Dockerfile  devcontainer.json  docker-compose.yml
.github/: copilot-instructions.md
.github/skills/gh-cli/: SKILL.md
.github/workflows/: codeql.yml
docs/standards-and-guides/: workflow-guide.md
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial_pgvector_schema.py
orange_red/: __init__.py  cli.py  crawl_outcome.py  okf.py  url_identity.py
scripts/: post-create.sh  verify.sh
tests/: test_okf.py
